--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
    align-items: center;
    color: white;
    flex: 1;
-   margin: 0;
+   margin: 40px;
 }
 #nav-ul {
    list-style-image: none;
